@@ -92,6 +92,9 @@ class Maps {
 	 * Enques the assets
 	 */
 	public function assets() {
+		if ( $this->is_a_bot() ) {
+			return;
+		}
 		$settings    = tour_operator()->options;
 		$api_key     = '';
 		$preview_src = $this->get_map_preview_src();
@@ -361,5 +364,213 @@ class Maps {
 			$preview_html .= '<div class="placeholder-text"><h2 class="lsx-to-section-title lsx-to-collapse-title lsx-title" style="margin-top:-' . ( ( (int) $height / 2 ) + 31 ) . 'px">' . esc_html__( 'Click to display the map', 'tour-operator' ) . '</h2></div>';
 		}
 		return $preview_html;
+	}
+	/**
+	 * Checking for bots on the maps.
+	 *
+	 * @package  ctt-lsx-child
+	 */
+	public function is_a_bot() {
+		$is_bot = false;
+		$user_agents = array(
+			'Googlebot',
+			'Googlebot-Mobile',
+			'Googlebot-Image',
+			'Googlebot-News',
+			'Googlebot-Video',
+			'AdsBot-Google',
+			'AdsBot-Google-Mobile-Apps',
+			'Feedfetcher-Google',
+			'Mediapartners-Google',
+			'APIs-Google',
+			'GTmetrix',
+			'Baiduspider',
+			'ia_archiver',
+			'R6_FeedFetcher',
+			'NetcraftSurveyAgent',
+			'Sogou web spider',
+			'bingbot',
+			'BingPreview',
+			'slurp',
+			'Yahoo! Slurp',
+			'Ask Jeeves/Teoma',
+			'facebookexternalhit',
+			'PrintfulBot',
+			'msnbot',
+			'Twitterbot',
+			'UnwindFetchor',
+			'urlresolver',
+			'Butterfly',
+			'TweetmemeBot',
+			'PaperLiBot',
+			'MJ12bot',
+			'AhrefsBot',
+			'Exabot',
+			'Ezooms',
+			'YandexBot',
+			'SearchmetricsBot',
+			'picsearch',
+			'TweetedTimes Bot',
+			'QuerySeekerSpider',
+			'ShowyouBot',
+			'woriobot',
+			'merlinkbot',
+			'BazQuxBot',
+			'Kraken',
+			'SISTRIX Crawler',
+			'R6_CommentReader',
+			'magpie-crawler',
+			'GrapeshotCrawler',
+			'PercolateCrawler',
+			'MaxPointCrawler',
+			'R6_FeedFetcher',
+			'NetSeer crawler',
+			'grokkit-crawler',
+			'SMXCrawler',
+			'PulseCrawler',
+			'Y!J-BRW',
+			'80legs.com/webcrawler',
+			'Mediapartners-Google',
+			'Spinn3r',
+			'InAGist',
+			'Python-urllib',
+			'NING',
+			'TencentTraveler',
+			'Feedfetcher-Google',
+			'mon.itor.us',
+			'spbot',
+			'Feedly',
+			'bitlybot',
+			'ADmantX Platform',
+			'Niki-Bot',
+			'Pinterest',
+			'python-requests',
+			'DotBot',
+			'HTTP_Request2',
+			'linkdexbot',
+			'A6-Indexer',
+			'Baiduspider',
+			'TwitterFeed',
+			'Microsoft Office',
+			'Pingdom',
+			'BTWebClient',
+			'KatBot',
+			'SiteCheck',
+			'proximic',
+			'Sleuth',
+			'Abonti',
+			'(BOT for JCE)',
+			'Baidu',
+			'Tiny Tiny RSS',
+			'newsblur',
+			'updown_tester',
+			'linkdex',
+			'baidu',
+			'searchmetrics',
+			'genieo',
+			'majestic12',
+			'spinn3r',
+			'profound',
+			'domainappender',
+			'VegeBot',
+			'terrykyleseoagency.com',
+			'CommonCrawler Node',
+			'AdlesseBot',
+			'metauri.com',
+			'libwww-perl',
+			'rogerbot-crawler',
+			'MegaIndex.ru',
+			'ltx71',
+			'Qwantify',
+			'Traackr.com',
+			'Re-Animator Bot',
+			'Pcore-HTTP',
+			'BoardReader',
+			'omgili',
+			'okhttp',
+			'CCBot',
+			'Java/1.8',
+			'semrush.com',
+			'feedbot',
+			'CommonCrawler',
+			'AdlesseBot',
+			'MetaURI',
+			'ibwww-perl',
+			'rogerbot',
+			'MegaIndex',
+			'BLEXBot',
+			'FlipboardProxy',
+			'techinfo@ubermetrics-technologies.com',
+			'trendictionbot',
+			'Mediatoolkitbot',
+			'trendiction',
+			'ubermetrics',
+			'ScooperBot',
+			'TrendsmapResolver',
+			'Nuzzel',
+			'Go-http-client',
+			'Applebot',
+			'LivelapBot',
+			'GroupHigh',
+			'SemrushBot',
+			'ltx71',
+			'commoncrawl',
+			'istellabot',
+			'DomainCrawler',
+			'cs.daum.net',
+			'StormCrawler',
+			'GarlikCrawler',
+			'The Knowledge AI',
+			'getstream.io/winds',
+			'YisouSpider',
+			'archive.org_bot',
+			'semantic-visions.com',
+			'FemtosearchBot',
+			'360Spider',
+			'linkfluence.com',
+			'glutenfreepleasure.com',
+			'Gluten Free Crawler',
+			'YaK/1.0',
+			'Cliqzbot',
+			'app.hypefactors.com',
+			'axios',
+			'semantic-visions.com',
+			'webdatastats.com',
+			'schmorp.de',
+			'SEOkicks',
+			'DuckABot',
+			'AOLBuild',
+			'Barkrowler',
+			'ZoominfoBot',
+			'Linguee Bot',
+			'Mail.RU_Bot',
+			'OnalyticaBot',
+			'Linguee Bot',
+			'admantx-adform',
+			'Buck/2.2',
+			'Barkrowler',
+			'Zombiebot',
+			'Nutch',
+			'SemanticScholarBot',
+			"Jetslid'e",
+			'scalaj-http',
+			'XoviBot',
+			'sysomos.com',
+			'PocketParser',
+			'newspaper',
+			'serpstatbot',
+		);
+		if ( isset( $_GET['debug_bot'] ) ) {
+			$user_agent = sanitize_text_field( $_GET['debug_bot'] );
+		} else {
+			$user_agent = sanitize_text_field( $_SERVER['HTTP_USER_AGENT'] );
+		}
+
+		foreach ( $user_agents as $agent ) {
+			if ( strtolower( $agent ) === strtolower( $user_agent ) ) {
+				$is_bot = true;
+			}
+		}
+		return $is_bot;
 	}
 }
